--- a/src/html/blog-author.html
+++ b/src/html/blog-author.html
@@ -41,10 +41,10 @@
                             <!-- heading -->
                             <div class="border-bottom pb-10 mb-10">
                                 <div class="h2 mb-10">Виталий Кучеров</div>
-                                <div class="h5 fw-light text-gray mb-0" style="max-width: 800px;">SEO-Специалист по&nbsp;продвижению и&nbsp;развитию сайтов</div>
+                                <div class="h5 fw-light text-black-60 mb-0" style="max-width: 800px;">SEO-Специалист по&nbsp;продвижению и&nbsp;развитию сайтов</div>
                             </div>
                             <div class="d-flex flex-wrap align-items-center gap-10">
-                                <div class="fw-light text-gray">Следите за&nbsp;мной:</div>
+                                <div class="fw-light text-black-60">Следите за&nbsp;мной:</div>
                                 <div class="d-flex flex-wrap gap-10">
                                     <a href="#">
                                         <img src="img/blog/author-telegram.svg" alt="...">
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                     <!-- articles and news -->
-                    <div class="d-flex flex-wrap align-items-center gap-10 fw-light text-gray mb-20 mb-xl-30">
+                    <div class="d-flex flex-wrap align-items-center gap-10 fw-light text-black-60 mb-20 mb-xl-30">
                         <div>Автор:</div>
                         <div>
                             <span>
@@ -100,7 +100,7 @@
                 <!-- about-author -->
                 <div class="rounded-wrapper bg-blue-light">
                     <div class="h4 fw-medium mb-10 mb-xl-20">Уже&nbsp;больше 10&nbsp;лет&nbsp;я&nbsp;живу SEO: анализирую сайты 🔎, строю стратегии 📊 и&nbsp;нахожу точки роста для&nbsp;бизнеса 📈</div>
-                    <ul class="list-unstyled d-flex flex-column gap-10 gap-15 text-gray fw-light mb-0">
+                    <ul class="list-unstyled d-flex flex-column gap-10 gap-xxl-15 fw-light text-black-60 mb-0">
                         <li>✨ Помогаю компаниям выходить в&nbsp;ТОП&nbsp;поисковиков</li>
                         <li>🤝 Консультирую проекты&nbsp;— от&nbsp;стартапов до&nbsp;крупных брендов</li>
                         <li>✍️ Люблю делиться практическими фишками и&nbsp;кейсами в&nbsp;блоге</li>
