--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -25,8 +25,9 @@
                 </nav>
 
                 <!-- heading -->
-                <div class="section__heading mb-20 mb-xl-40 mb-xxl-50">
-                    <div class="section__title h1 mb-10">Реализованные проекты</div>
+                <div class="mb-20 mb-xl-40 mb-xxl-50">
+                    <!-- title -->
+                    <div class="h1 mb-10">Реализованные проекты</div>
                 </div>
 
                 <!-- tags -->
