--- a/src/html/blog-single.html
+++ b/src/html/blog-single.html
@@ -9,56 +9,104 @@
     <!-- section -->
     <section class="section">
         <div class="container-fluid">
-            <!-- grid cols-2 -->
-            <div class="d-grid grid-cols-xl-2 gap-15 gap-md-20 gap-xxl-30 mb-20 mb-xxl-30">
+            <!-- row -->
+            <div class="row">
 
-                <div class="rounded-wrapper bg-white">
-                    <!-- breadcrumb -->
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb mb-20 mb-xl-30">
-                            <li class="breadcrumb-item">
-                                <a href="index.html">Главная</a>
+                <div class="col-lg-7">
+                    <!-- widget -->
+                    <div class="rounded-wrapper bg-white">
+                        <!-- breadcrumb -->
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb mb-20 mb-xl-30">
+                                <li class="breadcrumb-item">
+                                    <a href="index.html">Главная</a>
+                                </li>
+                                <li class="breadcrumb-item">
+                                    <a href="blog.html">Блог</a>
+                                </li>
+                                <li class="breadcrumb-item active" aria-current="page">
+                                    <span>Сайт-визитка: особенности и преимущества</span>
+                                </li>
+                            </ol>
+                        </nav>
+                        <!-- blog-meta -->
+                        <div class="blog-meta"></div>
+                        <!-- title -->
+                        <div class="h2 mb-10 mb-xxl-20">Сайт-визитка: особенности и&nbsp;преимущества</div>
+                        <!-- short description -->
+                        <div class="text-box fw-light text-black-60">
+                            <p>Не секрет, что почти весь бизнес перешёл в онлайн. Купить в интернете можно все что угодно: от хлеба до кухонного гарнитура. Не каждому нужен многостраничник с каталогами, десятками разделов и сотнями услуг. Рассказываем, что такое сайт-визитка, в чем её отличие от лендинга и какие преимущества она даёт.</p>
+                            <p>Сайт-визитка — небольшой сайт, основная функция которого отражается в названии. На таком ресурсе несколько разделов и страниц, которые содержат информацию о товаре, услуге или человеке.</p>
+                        </div>
+                    </div>
+    
+                    <!-- widget -->
+                    <div class="rounded-wrapper bg-blue-gradient">
+                        <div class="h3 fw-medium text-white mb-10 mb-xl-20">Содержание</div>
+                        <ul class="list-unstyled d-flex flex-column gap-3 fw-light link-white mb-0">
+                            <li>
+                                <a href="#">Аудитория Вконтакте и Однокласников</a>
                             </li>
-                            <li class="breadcrumb-item">
-                                <a href="blog.html">Блог</a>
+                            <li>
+                                <a href="#">Где найти то, что потерял?</a>
                             </li>
-                            <li class="breadcrumb-item active" aria-current="page">
-                                <span>Сайт-визитка: особенности и преимущества</span>
+                            <li>
+                                <a href="#">Я нашёл то, что искал, что делать?</a>
                             </li>
-                        </ol>
-                    </nav>
-                    <!-- blog-meta -->
-                    <div class="blog-meta"></div>
-                    <!-- heading -->
-                    <div class="h2 mb-10 mb-xxl-20">Сайт-визитка: особенности и&nbsp;преимущества</div>
-                    <div class="fw-light text-gray">
-                        <p>Не секрет, что почти весь бизнес перешёл в онлайн. Купить в интернете можно все что угодно: от хлеба до кухонного гарнитура. Не каждому нужен многостраничник с каталогами, десятками разделов и сотнями услуг. Рассказываем, что такое сайт-визитка, в чем её отличие от лендинга и какие преимущества она даёт.</p>
-                        <p>Сайт-визитка — небольшой сайт, основная функция которого отражается в названии. На таком ресурсе несколько разделов и страниц, которые содержат информацию о товаре, услуге или человеке.</p>
+                            <li>
+                                <a href="#">Где я? И что делать?</a>
+                            </li>
+                            <li>
+                                <a href="#">Это свет в конце тунеля или поезд?</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
-                <div class="rounded-wrapper bg-white">
-                    <!-- tags -->
-                    <div class="d-flex flex-wrap gap-1">
-                        <a href="#" class="tag-pill-primary">SEO</a>
-                        <a href="#" class="tag-pill-primary">Продвижение</a>
-                        <a href="#" class="tag-pill-primary">Аналитика</a>
-                        <a href="#" class="tag-pill-primary">Стратегия</a>
-                        <a href="#" class="tag-pill-primary">Развитие</a>
-                    </div>
-                    <!-- socials -->
-                    <div class="d-flex flex-wrap gap-10">
-                        <a href="#">
-                            <img src="img/blog/author-telegram.svg" alt="...">
-                        </a>
-                        <a href="#">
-                            <img src="img/blog/author-telegram.svg" alt="...">
-                        </a>
-                        <a href="#">
-                            <img src="img/blog/author-telegram.svg" alt="...">
-                        </a>
+                <div class="col-lg-5">
+                    <!-- widget -->
+                    <div class="rounded-wrapper bg-white">
+                        <!-- author -->
+                        <div class="d-flex align-items-center gap-10 mb-10 mb-xl-20 mb-xxl-30">
+                            <div class="flex-shrink-0">
+                                <!-- avatar -->
+                                <div class="author-avatar-small overflow-hidden bg-blue-light rounded">
+                                    <a href="blog-author.html">
+                                        <img src="img/blog/author-avatar-big.png" alt="...">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="flex-grow-1">
+                                <div class="small text-black-60">Автор статьи</div>
+                                <div class="h4 fw-medium link-black mb-0">
+                                    <a href="blog-author.html">Виталий Кучеров</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- tags -->
+                        <div class="d-flex flex-wrap gap-1 mb-10 mb-xl-20 mb-xxl-30">
+                            <a href="#" class="tag-pill-primary">SEO</a>
+                            <a href="#" class="tag-pill-primary">Продвижение</a>
+                            <a href="#" class="tag-pill-primary">Аналитика</a>
+                            <a href="#" class="tag-pill-primary">Стратегия</a>
+                            <a href="#" class="tag-pill-primary">Развитие</a>
+                        </div>
+                        <!-- socials -->
+                        <div class="d-flex flex-wrap gap-10">
+                            <a href="#">
+                                <img src="img/blog/author-telegram.svg" alt="...">
+                            </a>
+                            <a href="#">
+                                <img src="img/blog/author-telegram.svg" alt="...">
+                            </a>
+                            <a href="#">
+                                <img src="img/blog/author-telegram.svg" alt="...">
+                            </a>
+                        </div>
                     </div>
                 </div>
+
+
 
             </div>
         </div>
