--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -25,9 +25,11 @@
                 </nav>
 
                 <!-- heading -->
-                <div class="section__heading mb-40 mb-xl-60">
-                    <div class="section__title h1 mb-10">Блог: продвижение и&nbsp;развитие&nbsp;сайтов</div>
-                    <div class="section__subtitle h4 text-gray mb-0" style="max-width: 800px;">SEO, маркетинг и&nbsp;дизайн&nbsp;— просто о&nbsp;сложном для&nbsp;реального результата</div>
+                <div class="mb-40 mb-xl-60">
+                    <!-- title -->
+                    <div class="h1 mb-10">Блог: продвижение и&nbsp;развитие&nbsp;сайтов</div>
+                    <!-- subtitle -->
+                    <div class="h4 text-black-60 mb-0" style="max-width: 800px;">SEO, маркетинг и&nbsp;дизайн&nbsp;— просто о&nbsp;сложном для&nbsp;реального результата</div>
                 </div>
 
                 <!-- tags -->
