--- a/src/html/services.html
+++ b/src/html/services.html
@@ -25,8 +25,9 @@
                 </nav>
 
                 <!-- heading -->
-                <div class="section__heading mb-40 mb-xl-60">
-                    <div class="section__title h1 mb-10" style="max-width: 1100px;">От&nbsp;разработки и&nbsp;исследований до&nbsp;продвижения и&nbsp;сквозной аналитики</div>
+                <div class="mb-40 mb-xl-60">
+                    <!-- title -->
+                    <div class="h1 mb-10" style="max-width: 1100px;">От&nbsp;разработки и&nbsp;исследований до&nbsp;продвижения и&nbsp;сквозной аналитики</div>
                 </div>
 
                 <!-- content -->
