--- a/src/html/blog-single.html
+++ b/src/html/blog-single.html
@@ -12,10 +12,11 @@
             <!-- row -->
             <div class="row gy-15 gy-md-20 gy-xxl-30">
 
-                <div class="col-xl-7 col-xxl-8">
+                <!-- content -->
+                <div class="col-xl-17 col-xxl-15">
                     <div class="d-flex flex-column gap-15 gap-md-20 gap-xxl-30 h-100">
 
-                        <!-- widget -->
+                        <!-- widget: header -->
                         <div class="rounded-wrapper bg-white">
                             <!-- breadcrumb -->
                             <nav aria-label="breadcrumb">
@@ -90,7 +91,7 @@
                             </div>
                         </div>
 
-                        <!-- widget -->
+                        <!-- widget: content -->
                         <div class="rounded-wrapper bg-white">
 
                             <!-- content -->
@@ -172,11 +173,11 @@
                                     </li>
                                 </ul>
                                 <div class="my-4 my-xl-5">
-                                    <div class="row g-2">
-                                        <div class="col-xl-6">
+                                    <div class="row row-cols-1 row-cols-md-2 g-2">
+                                        <div class="col">
                                             <img class="img-fluid rounded" src="img/blog/card-blog-01.jpg" alt="...">
                                         </div>
-                                        <div class="col-xl-6">
+                                        <div class="col">
                                             <img class="img-fluid rounded" src="img/blog/card-blog-01.jpg" alt="...">
                                         </div>
                                     </div>
@@ -240,7 +241,8 @@
                     </div>
                 </div>
 
-                <div class="col-xl-5 col-xxl-4">
+                <!-- sidebar -->
+                <div class="col-xl-7 col-xxl-9">
                     <div class="d-flex flex-column gap-15 gap-md-20 gap-xxl-30 h-100">
 
                         <!-- widget -->
@@ -296,7 +298,7 @@
                         </div>
 
                         <!-- widget -->
-                        <div class="rounded-wrapper p-xxl-40 bg-gray-gradient">
+                        <div class="rounded-wrapper bg-gray-gradient">
                             <div class="d-flex flex-column">
                                 <div class="text-center">
                                     <img class="img-fluid" src="img/blog/blog-widget-seo-gray.png" alt="..." style="filter: drop-shadow(0px 30px 10px rgba(86, 93, 101, 0.4));">
@@ -332,7 +334,7 @@
                         </div>
 
                         <!-- widget -->
-                        <div class="rounded-wrapper p-xxl-40 bg-red-gradient">
+                        <div class="widget-sticky rounded-wrapper bg-red-gradient">
                             <div class="h4 fw-medium text-white mb-10 mb-xl-20">Поднимите свой сайт в&nbsp;топ&nbsp;Яндекса</div>
                             <div class="d-flex flex-column gap-10 fw-light text-white mb-0">
                                 <div class="d-flex align-items-center gap-10">
