--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
 <main class="main">
 
     <!-- section-home-hero -->
-    <section class="section section-home-hero">
+    <section class="section section-home-hero mb-0">
         <div class="container-fluid">
             <div class="row-hero row row-cols-1 row-cols-lg-2">
                 <div class="col">
