--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,8 @@
     <section class="section section-home-hero mb-0">
         <div class="container-fluid">
             <div class="row-hero row row-cols-1 row-cols-lg-2">
+
+                <!-- col -->
                 <div class="col">
                     <div class="d-flex align-items-center justify-content-center h-100">
 
@@ -32,13 +34,71 @@
 
                     </div>
                 </div>
+
+                <!-- col -->
                 <div class="col">
                     <div class="d-flex flex-column h-100">
 
                         <!-- card-hero-info -->
-                        @@include('partials/card-hero-info.html')
+                        <div class="card card-hero-info">
+                            <div class="card-body">
+                                <div>
+                                    <!-- title -->
+                                    <h1 class="hero-title">Digital-продукты для&nbsp;бизнеса: эффективная стратегия под&nbsp;отрасль</h1>
+                                    <!-- subtitle -->
+                                    <div class="d-flex gap-10">
+                                        <span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                                                <circle cx="18" cy="2" r="2" fill="#F74251"/>
+                                                <circle cx="18" cy="10" r="2" fill="#F74251"/>
+                                                <circle cx="18" cy="18" r="2" fill="#F74251"/>
+                                                <circle cx="26" cy="18" r="2" fill="#F74251"/>
+                                                <circle cx="10" cy="18" r="2" fill="#F74251"/>
+                                                <circle cx="2" cy="18" r="2" fill="#F74251"/>
+                                                <circle cx="12" cy="12" r="2" fill="#F74251"/>
+                                                <circle cx="12" cy="23" r="2" fill="#F74251"/>
+                                                <circle cx="7" cy="29" r="2" fill="#F74251"/>
+                                                <circle cx="7" cy="7" r="2" fill="#F74251"/>
+                                                <circle cx="24" cy="12" r="2" fill="#F74251"/>
+                                                <circle cx="24" cy="24" r="2" fill="#F74251"/>
+                                                <circle cx="30" cy="29" r="2" fill="#F74251"/>
+                                                <circle cx="30" cy="8" r="2" fill="#F74251"/>
+                                                <circle cx="34" cy="18" r="2" fill="#F74251"/>
+                                                <circle cx="18" cy="26" r="2" fill="#F74251"/>
+                                                <circle cx="18" cy="34" r="2" fill="#F74251"/>
+                                            </svg>
+                                        </span>
+                                        <div class="hero-subtitle h5 fw-light text-black-60 mb-0">От&nbsp;шаблона до&nbsp;сложных экосистем.<br> Быстрый старт за&nbsp;14&nbsp;дней с&nbsp;возможностью масштабирования</div>
+                                    </div>
+                                </div>
+                                <div class="card-btn-wrapper">
+                                    <a href="#" class="btn btn-primary btn-l btn-animated w-100">
+                                        <div class="animated-content">
+                                            <div class="animated-content__default">
+                                                <span>Обсудить проект</span>
+                                                <span>
+                                                    <svg width="14" height="14">
+                                                        <use xlink:href="img/sprite.svg#btn-arrow-up"></use>
+                                                    </svg>
+                                                </span>
+                                            </div>
+                                            <div class="animated-content__hidden">
+                                                <span>Обсудить проект</span>
+                                                <span>
+                                                    <svg width="14" height="14">
+                                                        <use xlink:href="img/sprite.svg#btn-arrow-down"></use>
+                                                    </svg>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
 
-                        <div>
+                        <!-- swiper-area -->
+                        <div class="swiper-area">
+
                             <!-- swiperHeroGlassCards -->
                             <div class="swiper swiperHeroGlassCards">
                                 <div class="swiper-wrapper">
@@ -77,10 +137,12 @@
                                 </div>
                                 <div class="swiper-pagination"></div>
                             </div>
+
                         </div>
 
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
