--- a/src/html/blog-single.html
+++ b/src/html/blog-single.html
@@ -19,19 +19,21 @@
                         <!-- widget: header -->
                         <div class="rounded-wrapper bg-white">
                             <!-- breadcrumb -->
-                            <nav aria-label="breadcrumb">
-                                <ol class="breadcrumb mb-20 mb-xl-30">
-                                    <li class="breadcrumb-item">
-                                        <a href="index.html">Главная</a>
-                                    </li>
-                                    <li class="breadcrumb-item">
-                                        <a href="blog.html">Блог</a>
-                                    </li>
-                                    <li class="breadcrumb-item active" aria-current="page">
-                                        <span>Сайт-визитка: особенности и преимущества</span>
-                                    </li>
-                                </ol>
-                            </nav>
+                            <div class="breadcrumb-area">
+                                <nav aria-label="breadcrumb">
+                                    <ol class="breadcrumb mb-20 mb-xl-30">
+                                        <li class="breadcrumb-item">
+                                            <a href="index.html">Главная</a>
+                                        </li>
+                                        <li class="breadcrumb-item">
+                                            <a href="blog.html">Блог</a>
+                                        </li>
+                                        <li class="breadcrumb-item active" aria-current="page">
+                                            <span>Сайт-визитка: особенности и преимущества</span>
+                                        </li>
+                                    </ol>
+                                </nav>
+                            </div>
                             <!-- blog-meta -->
                             <div class="blog-meta d-flex flex-wrap row-gap-1 column-gap-40 mb-15 mb-xl-30">
                                 <!-- date -->
