--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -13,16 +13,18 @@
             <div>
 
                 <!-- breadcrumb -->
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item">
-                            <a href="index.html">Главная</a>
-                        </li>
-                        <li class="breadcrumb-item active" aria-current="page">
-                            <span>Проекты</span>
-                        </li>
-                    </ol>
-                </nav>
+                <div class="breadcrumb-area">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item">
+                                <a href="index.html">Главная</a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">
+                                <span>Проекты</span>
+                            </li>
+                        </ol>
+                    </nav>
+                </div>
 
                 <!-- heading -->
                 <div class="mb-20 mb-xl-40 mb-xxl-50">
