--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -13,16 +13,18 @@
             <div>
 
                 <!-- breadcrumb -->
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item">
-                            <a href="index.html">Главная</a>
-                        </li>
-                        <li class="breadcrumb-item active" aria-current="page">
-                            <span>Наши партнёры</span>
-                        </li>
-                    </ol>
-                </nav>
+                <div class="breadcrumb-area">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item">
+                                <a href="index.html">Главная</a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">
+                                <span>Наши партнёры</span>
+                            </li>
+                        </ol>
+                    </nav>
+                </div>
 
                 <!-- heading -->
                 <div class="mb-40 mb-xl-60">
@@ -31,7 +33,7 @@
                 </div>
 
                 <!-- content -->
-                <div class="d-grid grid-cols-sm-2 grid-cols-xl-3 gap-15 gap-md-20 gap-xxl-30 mb-20 mb-xxl-30">
+                <div class="d-grid grid-cols-1 grid-cols-sm-2 grid-cols-xl-3 gap-15 gap-md-20 gap-xxl-30 mb-20 mb-xxl-30">
                     <!-- card -->
                     @@include('partials/card-partner.html', {
                         "imgPreview": "img/partners/bitrix.svg",
