--- a/src/html/services-single.html
+++ b/src/html/services-single.html
@@ -582,7 +582,7 @@
                 <div class="h2 mb-15 mb-xl-40 mb-xxl-50">Каким будет ваш&nbsp;сайт</div>
 
                 <!-- grid -->
-                <div class="d-grid grid-cols-md-2 grid-cols-xl-3 gap-30 gap-md-20 gap-xl-40 gap-xxl-50">
+                <div class="d-grid grid-cols-1 grid-cols-md-2 grid-cols-xl-3 gap-30 gap-md-20 gap-xl-40 gap-xxl-50">
                     <!-- item -->
                     <div class="d-flex flex-column">
                         <div class="mb-10">
@@ -645,7 +645,7 @@
                 <div class="h2 mb-15 mb-xl-40 mb-xxl-50">Выбор платформы</div>
 
                 <!-- grid -->
-                <div class="d-grid grid-cols-md-2 grid-cols-xl-3 gap-30 gap-md-20 gap-xl-40 gap-xxl-50">
+                <div class="d-grid grid-cols-1 grid-cols-md-2 grid-cols-xl-3 gap-30 gap-md-20 gap-xl-40 gap-xxl-50">
                     <!-- item -->
                     <div class="d-flex flex-column">
                         <div class="h3 fw-medium mb-10">Разработка сайта на&nbsp;1С-Битрикс</div>
