--- a/src/html/services-single.html
+++ b/src/html/services-single.html
@@ -9,11 +9,12 @@
     <!-- section-home-hero -->
     <section class="section section-home-hero">
         <div class="container-fluid">
-            <div class="row row-cols-1 row-cols-lg-2">
+            <div class="d-grid grid-cols-1 gap-15 gap-md-20 gap-xxl-30">
 
-                <!-- col -->
-                <div class="col">
-                    <div class="d-flex align-items-center justify-content-center h-100">
+                <!-- row -->
+                <div class="d-grid grid-cols-1 grid-cols-lg-2 gap-15 gap-md-20 gap-xxl-30">
+                    <!-- col 1 -->
+                    <div class="d-flex align-items-center justify-content-center">
 
                         <!-- home-hero-video -->
                         <video class="home-hero-video" autoplay muted loop playsinline poster="img/home/hero-video-cover.png">
@@ -33,11 +34,8 @@
                         </picture>
 
                     </div>
-                </div>
-
-                <!-- col -->
-                <div class="col">
-                    <div class="d-flex flex-column h-100">
+                    <!-- col 2 -->
+                    <div class="d-flex flex-column gap-30">
 
                         <!-- card-hero-info -->
                         <div class="card card-hero-info">
@@ -103,12 +101,10 @@
                     </div>
                 </div>
 
-            </div>
-            <div class="row row-cols-1 row-cols-lg-2 gy-30">
-
-                <div class="col">
+                <!-- row -->
+                <div class="d-grid grid-cols-1 grid-cols-lg-2 gap-15 gap-md-20 gap-xxl-30">
                     <!-- card -->
-                    <div class="position-relative overflow-hidden d-flex gap-10 gap-md-20 rounded-3 bg-white p-15 p-xl-30 h-100">
+                    <div class="position-relative overflow-hidden d-flex gap-10 gap-md-20 rounded-3 bg-white p-15 p-xl-30">
                         <div>
                             <div class="h4 fw-medium text-black mb-10">
                                 <a href="#">Рассрочка от&nbsp;2&nbsp;до&nbsp;12&nbsp;месяцев без&nbsp;переплат</a>
@@ -124,11 +120,8 @@
                             </svg>
                         </div>
                     </div>
-                </div>
-
-                <div class="col">
                     <!-- card -->
-                    <div class="position-relative overflow-hidden d-flex gap-10 gap-md-20 rounded-3 bg-white p-15 p-xl-30 h-100">
+                    <div class="position-relative overflow-hidden d-flex gap-10 gap-md-20 rounded-3 bg-white p-15 p-xl-30">
                         <div>
                             <div class="h4 fw-medium text-black mb-10">
                                 <a href="#">Реферальная программа</a>
