--- a/src/html/blog-author.html
+++ b/src/html/blog-author.html
@@ -42,7 +42,7 @@
                         <div class="flex-grow-1">
                             <!-- heading -->
                             <div class="border-bottom pb-10 mb-10">
-                                <div class="h2 mb-10">Виталий Кучеров</div>
+                                <h1 class="h2 mb-10">Виталий Кучеров</h1>
                                 <div class="h5 fw-light text-black-60 mb-0" style="max-width: 800px;">SEO-Специалист по&nbsp;продвижению и&nbsp;развитию сайтов</div>
                             </div>
                             <div class="d-flex flex-wrap align-items-center gap-10">
