--- a/src/html/blog-single.html
+++ b/src/html/blog-single.html
@@ -59,7 +59,7 @@
                                 </div>
                             </div>
                             <!-- title -->
-                            <div class="h2 mb-10 mb-xxl-20">Сайт-визитка: особенности и&nbsp;преимущества</div>
+                            <h1 class="h2 mb-10 mb-xxl-20">Сайт-визитка: особенности и&nbsp;преимущества</h1>
                             <!-- short description -->
                             <div class="text-box fw-light text-black-60">
                                 <p>Не секрет, что почти весь бизнес перешёл в онлайн. Купить в интернете можно все что угодно: от хлеба до кухонного гарнитура. Не каждому нужен многостраничник с каталогами, десятками разделов и сотнями услуг. Рассказываем, что такое сайт-визитка, в чем её отличие от лендинга и какие преимущества она даёт.</p>
