--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -29,7 +29,7 @@
                 <!-- heading -->
                 <div class="mb-40 mb-xl-60">
                     <!-- title -->
-                    <div class="h1 mb-10">Блог: продвижение и&nbsp;развитие&nbsp;сайтов</div>
+                    <h1 class="mb-10">Блог: продвижение и&nbsp;развитие&nbsp;сайтов</h1>
                     <!-- subtitle -->
                     <div class="h4 text-black-60 mb-0" style="max-width: 800px;">SEO, маркетинг и&nbsp;дизайн&nbsp;— просто о&nbsp;сложном для&nbsp;реального результата</div>
                 </div>
