--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -29,7 +29,7 @@
                 <!-- heading -->
                 <div class="mb-40 mb-xl-60">
                     <!-- title -->
-                    <div class="h1 mb-10" style="max-width: 1100px;">Наши партнеры</div>
+                    <h1 class="mb-10 max-w-1100">Наши партнеры</h1>
                 </div>
 
                 <!-- content -->
