--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -29,7 +29,7 @@
                 <!-- heading -->
                 <div class="mb-20 mb-xl-40 mb-xxl-50">
                     <!-- title -->
-                    <div class="h1 mb-10">Реализованные проекты</div>
+                    <h1 class="mb-10">Реализованные проекты</h1>
                 </div>
 
                 <!-- tags -->
