--- a/src/html/services.html
+++ b/src/html/services.html
@@ -29,7 +29,7 @@
                 <!-- heading -->
                 <div class="mb-40 mb-xl-60">
                     <!-- title -->
-                    <div class="h1 mb-10" style="max-width: 1100px;">От&nbsp;разработки и&nbsp;исследований до&nbsp;продвижения и&nbsp;сквозной аналитики</div>
+                    <h1 class="mb-10 max-w-1100">От&nbsp;разработки и&nbsp;исследований до&nbsp;продвижения и&nbsp;сквозной аналитики</h1>
                 </div>
 
                 <!-- content -->
